# Opportunity-Matrix-

./: .env.example  .gitignore  CLAUDE.md  config.yaml  pyproject.toml
docs/plans/: 2026-03-14-opportunity-matrix-design.md  2026-03-14-opportunity-matrix-implementation.md
opportunity_matrix/: __init__.py  __main__.py  cli.py  config.py  rube_client.py
opportunity_matrix/collectors/: base.py  github_trending.py  hackernews.py  reddit.py  twitter.py
opportunity_matrix/reporting/: digest.py
opportunity_matrix/scoring/: cross_platform.py  engagement.py  feasibility.py
opportunity_matrix/storage/: db.py  models.py
tests/: test_cli.py  test_collectors.py  test_config.py  test_cross_platform.py  test_engagement.py  test_feasibility.py  test_github.py  test_integration.py  test_reddit.py  test_reporting.py  test_storage.py  test_twitter.py
zeroclaw/: skill.toml
